# Shrimp

./: .gitignore  Cargo.toml  README.md
docs/: design_notes.md  grammar.md
src/: builtin.rs  config.rs  input_handler.rs  lib.rs  main.rs  pipeline.rs  preprocessor.rs  redirection.rs  redirections.rs  step.rs
src/builtin_functions/: cd.rs  exit.rs  mod.rs
src/builtins/: cd.rs
tests/: err
