[package]
name = "shrimp"
version = "0.0.0"
authors = ["João Victor Guimarães <jvlsg-github@ipriva.org>"]
edition = "2018"
description = "A simple shell"
repository = "https://github.com/jvlsg/Shrimp"
license ="GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"